more whitespace fixes

--- a/css/main.sass
+++ b/css/main.sass
@@ -232,6 +232,12 @@ body
     text-decoration: none
     &:hover
       color: #333
+
+.archive
+  article
+    padding: 0
+
+
 .post
   .article-image
     position: absolute
